www/style.css
/* ... */
@media only screen and (max-width: 767px) {
	
	figcaption {
		background-color: rgba(0,0,0,0.3);
		bottom: 0px;
		font-size: 10px;
		padding: 5px 10px;
		right: 0px;
		border-radius: 0;
	}
	
	.text-aligh-right {
		text-align:left;
	}
	
	.one_half {
    	width: 100%!important;
	}
	
	.one_half {
    	padding-right: 0!important;
	}
	
	.one_half.last {
    	padding-left: 0!important;
	}

	.one_third {
		width: 100%!important;
	}	

	.one_fourth {
		width: 100%!important;
	}	

	.one_fifth {
		width: 100%!important;
	}	

	.one_sixth {
		width: 100%!important;
	}	

	.two_fifth {
		width: 100%!important;
	}	

	.two_fourth {
		width: 100%!important;
	}		

	.two_third {
		width: 100%!important;
	}	

	.three_fifth {
		width: 100%!important;
	}	

	.three_fourth {
		width: 100%!important;
	}	

	.four_fifth {
		width: 100%!important;
	}	

	.five_sixth {
		width: 100%!important;
	}	

	.one_half, .one_third, .two_third, .three_fourth, .one_fourth, .two_fourth, .one_fifth, .two_fifth, .three_fifth, .four_fifth, .one_sixth, .five_sixth {
		margin-bottom: 30px!important;
		margin-right: 0%!important;
	}
	
	.row_padding_top {
		padding-top:5vw;
	}

	.row_padding_bottom {
		padding-bottom:5vw;
	}
	
	.row_padding_left {
		padding-left: 0px;
	}
	
	.row_padding_right {
		padding-right: 0px;
	}
	
	.full.row_padding_left {
		padding-left: 30px;
	}
	
	.full.row_padding_right {
		padding-right: 30px;
	}
	
	.row_padding_all {
		padding-top: 4vw;
		padding-bottom: 4vw;
		padding-left: 0px;
		padding-right: 0px;
	}
	
	.full.row_padding_all {
		padding-top: 4vw;
		padding-bottom: 4vw;
		padding-left: 30px;
		padding-right: 30px;
	}
	
	.clip-effects {
		overflow: hidden;
		clip-path: inset(2% 5% round 30px);
	}
	
	hr {
		height: 20px;
	}
	
	.big-title {
		font-size: clamp(48px, 8.5vw, 130px); 
		line-height: clamp(48px, 8.5vw, 130px);
	}
	
	.bigger {
		font-size: 20px;
		line-height: 30px;
	}
	
	.trackbar {
  		padding: 0 30px;
	}
	
	.percentage-intro {
  		bottom: 30px;
	}
	
	.clapat-header {
		height:80px;
	}
	
	#header-container {
    	padding: 0;
		margin: 0 auto;
	}
	
	.header-middle {
		display:none;
	}
	
	.clapat-header .button-text {
    	display: block!important;
		opacity:0;
		pointer-events:none;
  	}
	
	#clapat-logo {
		left: 30px;
	}
	
	.button-wrap.right.menu {
		right: 4px;
	}
	
	.button-wrap.right.menu.burger-lines {
		right: 0px;
	}
	
	.clapat-header .button-text {
		display: none;
	}
	
	.flexnav > li > a {
		font-size: calc(1rem + 5vw);
		line-height: calc(1rem + 6vw);
	}
	
	.flexnav li a span {
		position: relative;
		display: block;
		-webkit-transform: translateY(-5px);
		transform: translateY(-5px);
	}
	
	.flexnav > li > .touch-button {
		width: 100%;		
		height:calc(1rem + 6vw);
		display: block;
	}
	
	.clapat-footer {
		height: 80px;
	}
	
	.footer-button-wrap {
    	bottom: 80px;
	}
	
	#footer-container {
		height: 80px;
		padding: 0 30px;
		margin:0;
	}
	
	#footer-container #backtotop.button-wrap.left {
		float: none;
		top:5px;
		left: 0;
		right: 0;
		position: absolute;
		display:block;
	}
	
	#backtotop.button-wrap.left .button-text {
		text-align: left;
		float: left;
		display: none;
	}
	
	#backtotop.button-wrap.left .icon-wrap {
		float: none;
		position: absolute;
		right: auto;
		left: 0;
		margin: auto;
		top: 0px;
		opacity:0.4;
		-webkit-transition: opacity 0.2s ease-out 0s;
		transition: opacity 0.2s ease-out 0s;
	}
	
	#backtotop.button-wrap.left:hover .icon-wrap {
		opacity:1;
	}
	
	.footer-middle {
		max-width: 1180px;
		height:20px;
		position: relative;
		margin: 0 auto;
		left: 0;
		width: 100%;
		top: 0px;
		margin-bottom: 15px;
	}
	
	.copyright {
		margin: 0 auto;
		left: auto;
		right: auto;
		top: 0;
		height: 20px;
		line-height: 20px;
	}
	
	.clapat-footer.showcase-footer .arrows-wrap {
		right: auto;
		left: -30px;
		float: left;
		margin: auto;
	}
	
	.socials-wrap {
		width: auto;
		float: none;
		display: table;
		left: auto;
		right: auto;
		top: 0;
		margin: 0 auto;		
		height: 20px;
		line-height: 20px;
		transform: translateX(0px) translateY(0px)!important;
		-webkit-transform: translateX(0px) translateY(0px)!important;
	}
	
	.socials-wrap .socials {
		text-align: center;
		margin: 0 auto;
		height: 20px;
		line-height: 20px;
		display: table;
		width: auto;
	}
	
	.socials li, .socials li a {
		height: 20px;
		line-height: 20px;
		margin: 0 auto;
	}
	
}
/* ... */

